fix backdrop-filter rendering on firefox

--- a/ark/docs/src/styles.css
+++ b/ark/docs/src/styles.css
@@ -96,8 +96,16 @@ starlight-theme-select,
 	border-radius: 1rem;
 	opacity: 1;
 	backdrop-filter: blur(10px);
-	border: 1px solid rgba(255, 255, 255, 0.2);
+	border: 1px solid #ba7e4127;
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+/* FireFox specific rules */
+@-moz-document url-prefix() {
+	/* The backdrop-filter above doesn't work by default yet on FireFox so we do this instead  */
+	.twoslash .twoslash-hover:hover .twoslash-popup-container {
+		background: #001323ee;
+	}
 }
 
 h1 {
